# USFFTpp

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml
cmake/: USFFTppConfig.cmake.in
core/: CMakeLists.txt
core/include/: convPolicies.h  usfft-seq.h  usfftpp.h
core/include/USFFTpp/: convPolicies.h  usfft-seq.h  usfftpp.h
core/src/: usfftpp.cpp
core/src/impl/: seq.hpp  usfft1d.hpp  usfft2d.hpp
python/: CMakeLists.txt  bindings.cpp
python/tests/: test_basic.py
python/usfftpp/: __init__.py
tests/: CMakeLists.txt  tests.cpp  tests2d.cpp
